fix: поправил сумму на позицаиях

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -346,7 +346,7 @@
 								<div class="accordion__body card-body">
 									<!-- Этапы работы -->
 									<ul class="todo-list  overflow-hidden mt-3" data-stages data-widget="todo-list">
-										<li class="todo-list__item p-0 " data-item-id='${idItem}'>
+										<li class="todo-list__item p-0 " data-item-id='id-p9qbhqx3qm650ixbt'>
 											<div class="todo-list__contetn">
 												<span class="handle  _icon-darag">
 												</span>
@@ -405,7 +405,7 @@
 																		<div onclick="editTextInput(event)" data-price-position><input
 																				data-number type="text" data-edit-input=""
 																				onblur="saveTextInput(event)" class="input-default"></div>
-																		<div data-sum-position></div>
+																		<div data-sum-position>0</div>
 																		<div><button type="button" class="btn-del-small"
 																				onclick="deleteItem('id-wdsa7x0fvm64msiq3')"></button></div>
 																	</li>
@@ -415,7 +415,8 @@
 																<button type="button" class="butt-plus"
 																	onclick="creatingPosition('${idItem}')"
 																	data-create-position><span>Позиция</span></button>
-																<span class="footer-list__sum">Итого: 0 р.</span>
+																<span class="footer-list__sum">Итого: <span
+																		data-sum-id="id-p9qbhqx3qm650ixbt">0</span> р.</span>
 															</li>
 														</ul>
 													</div>
