--- a/pages/price-list.html
+++ b/pages/price-list.html
@@ -192,7 +192,8 @@
               <td class="sorting_1">Доски струганые половые</td>
               <td>метры</td>
               <td>10</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
+                  data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
             <tr>
@@ -204,7 +205,8 @@
               <td class="sorting_1">Монтаж теплого пола</td>
               <td>метры</td>
               <td>20</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
+                  data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
             <tr>
@@ -215,11 +217,11 @@
               <td class="sorting_1">Циклевальная машина</td>
               <td>метры</td>
               <td>40</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
+                  data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
             <tr>
-
               <td class="dtr-control" tabindex="0"></td>
               <td><span class="_doc-category">
                   Док
@@ -228,137 +230,17 @@
               <td class="sorting_1">Грузовая газель</td>
               <td>метры</td>
               <td>50</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
+              <td><button type=" button" onclick='editPositionPriceList(event)' data-toggle="modal"
+                  data-target="#modal-lg" class=" btn-edit"></button></td>
               <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
             </tr>
 
-            <tr>
 
-              <td class="dtr-control" tabindex="0"></td>
-              <td><span class="_mat-category">Мат</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Доски струганые половые</td>
-              <td>метры</td>
-              <td>60</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small"></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
-            <tr>
-
-              <td class="dtr-control" tabindex="0">6</td>
-              <td><span class="_rab-category">Раб</span></td>
-              <td class="">01232</td>
-              <td class="sorting_1">Монтаж теплого пола</td>
-              <td>метры</td>
-              <td>100</td>
-              <td><button type=" button" data-toggle="modal" data-target="#modal-lg" class=" btn-edit"></button></td>
-              <td><button type=" button" onclick="deleteItemPL(event)" class=" btn-del-small "></button></td>
-            </tr>
           </tbody>
 
         </table>
 
-        <button type="button" class="butt-plus  mt-3" onclick="creatingItemPL()"><span>Этап
-            работ</span></button>
+        <button type="button" class="butt-plus  mt-3" onclick="creatingItemPL()"><span>Позиция</span></button>
 
       </div>
 
@@ -366,29 +248,7 @@
     </div>
 
   </div>
-  <!-- Начало Модлаьно окно -->
-  <div class="modal fade" id="modal-lg" style="display: none;" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Large Modal</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>One fine body…</p>
-        </div>
-        <div class="modal-footer justify-content-between">
-          <button type="button" class="butt" data-dismiss="modal">Отмена</button>
-          <button type="button" class="butt-success">Сохранить</button>
-        </div>
-      </div>
 
-    </div>
-
-  </div>
-  <!-- Конец Модлаьно окно -->
 
   <!-- jQuery -->
   <script src="../plugins/jquery/jquery.min.js"></script>
@@ -431,16 +291,51 @@
   <script src="../public/plugins/summernote/summernote-bs4.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../dist/js/adminlte.min.js?v=3.2.0"></script>
-  <!-- AdminLTE for demo purposes -->
-  <!-- <script src="./public/dist/js/demo.js"></script> -->
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="../public/dist/js/pages/dashboard.js"></script>
+
 
 
 
   <script type="module" src="../src/assets/js/main.js"></script>
+  <!-- Начало Модлаьно окно -->
+  <div class="modal fade" id="modal-lg" data-modal-id style="display: none;" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content modal-custom">
+        <div class="modal-custom__content">
+          <div class="modal-custom__title middle-title mb-3">Редактирование позиции</div>
+          <div class="user-info">
+
+            <div class="user-info__item">
+              <div class="user-info__label">Имя позиции:</div>
+              <div class="user-info__contetn"><input autocomplete="off" type="text" name="Имя позиции"
+                  data-error="Ошибка" placeholder="Введите имя позиции" class="input-default"></div>
+            </div>
+            <div class="user-info__item">
+              <div class="user-info__label">Единица измерения:</div>
+              <div class="user-info__contetn"><input autocomplete="off" type="text" name="Единица измерения"
+                  data-error="Ошибка" placeholder="Введите ед. изм." class="input-default"></div>
+            </div>
+            <div class="user-info__item">
+              <div class="user-info__label">Цена:</div>
+              <div class="user-info__contetn">
+                <input autocomplete="off" type="text" name="Цена" data-error="Ошибка" placeholder="Введите цену"
+                  class="input-default">
+              </div>
+            </div>
 
 
+          </div>
+          <div class="d-flex mt-5 justify-content-between modal-custom__footer">
+            <button type="button" data-dismiss="modal" class="butt">Отмена</button>
+            <button type="button" onclick="saveEditPositionPriceList(event)" data-dismiss="modal"
+              class="butt-success ">Сохранить</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <!-- Конец Модлаьно окно -->
 </body>
 
 </html>
