feat: добавил по чекбоксам выделения

--- a/pages/create-smeta.html
+++ b/pages/create-smeta.html
@@ -383,8 +383,8 @@
 															<li class=" list-accordion__head">
 																<div></div>
 																<div><label class="checkbox">
-																		<input hidden="" data-chkc-stage="" type="checkbox"
-																			class="checkbox__input" name="checkbox-smeta">
+																		<input hidden="" onchange="chooseAllCheckbox(event)"
+																			type="checkbox" class="checkbox__input">
 																	</label></div>
 																<div>№</div>
 																<div>Арт.</div>
@@ -409,7 +409,8 @@
 																		<div></div>
 																		<div class="list-accordion__name" onclick="editTextInput(event)">
 																			<input type="text" data-edit-input=""
-																				onblur="saveTextInput(event)" class="input-default"></div>
+																				onblur="saveTextInput(event)" class="input-default">
+																		</div>
 																		<div onclick="editTextInput(event)"><input type="text"
 																				data-edit-input="" onblur="saveTextInput(event)"
 																				class="input-default"></div>
@@ -435,7 +436,8 @@
 																		<div></div>
 																		<div class="list-accordion__name" onclick="editTextInput(event)">
 																			<input type="text" data-edit-input=""
-																				onblur="saveTextInput(event)" class="input-default"></div>
+																				onblur="saveTextInput(event)" class="input-default">
+																		</div>
 																		<div onclick="editTextInput(event)"><input type="text"
 																				data-edit-input="" onblur="saveTextInput(event)"
 																				class="input-default"></div>
@@ -490,8 +492,8 @@
 															<li class=" list-accordion__head">
 																<div></div>
 																<div><label class="checkbox">
-																		<input hidden="" data-chkc-stage="" type="checkbox"
-																			class="checkbox__input" name="checkbox-smeta">
+																		<input hidden="" type="checkbox" class="checkbox__input"
+																			onchange="chooseAllCheckbox(event)">
 																	</label></div>
 																<div>№</div>
 																<div>Арт.</div>
@@ -516,7 +518,8 @@
 																		<div></div>
 																		<div class="list-accordion__name" onclick="editTextInput(event)">
 																			<input type="text" data-edit-input=""
-																				onblur="saveTextInput(event)" class="input-default"></div>
+																				onblur="saveTextInput(event)" class="input-default">
+																		</div>
 																		<div onclick="editTextInput(event)"><input type="text"
 																				data-edit-input="" onblur="saveTextInput(event)"
 																				class="input-default"></div>
@@ -542,7 +545,8 @@
 																		<div></div>
 																		<div class="list-accordion__name" onclick="editTextInput(event)">
 																			<input type="text" data-edit-input=""
-																				onblur="saveTextInput(event)" class="input-default"></div>
+																				onblur="saveTextInput(event)" class="input-default">
+																		</div>
 																		<div onclick="editTextInput(event)"><input type="text"
 																				data-edit-input="" onblur="saveTextInput(event)"
 																				class="input-default"></div>
